Modified app for clean archetecture
